Make sure that the arrow completely covers the speech bubble border.

--- a/css/spni.css
+++ b/css/spni.css
@@ -1104,7 +1104,7 @@ ul.dropdown-menu>li {
     border-style: solid;
 
     /* Clip arrow to only the part sticking out of the box. */
-    clip-path: polygon(100% 0, 100% 100%, 0 100%);
+    clip-path: polygon(100% -0.1rem, 100% 100%, -0.1rem 100%);
 }
 
 .arrow-down::before {
